--- a/bizeUlasin.html
+++ b/bizeUlasin.html
@@ -106,64 +106,64 @@
         </div>
     </div>
     <footer class="site-footer py-5 footer-bar">
-        <div class="container-fluid text-white">
-            <div class="row text-center">
-                <div class="col-md-4">
-                    <ul>
-                        <li>
-                            <a href="index.html">Ana Sayfa</a>
-                        </li>
-                        <li>
-                            <a href="yardim.html">Yardım</a>
-                        </li>
-                        <li>
-                            <a href="bizeUlasin.html">Bize Ulaşın</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul>
-                        <li>
-                            <a href="">Destek</a>
-                        </li>
-                        <li>
-                            <a href="">Gizlilik Politikası</a>
-                        </li>
-                        <li>
-                            <a href="">Kullanım Sözleşmesi</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <ul>
-                        <li>
-                            <a href="">Süre Satın Al</a>
-                        </li>
-                        <li>
-                            <a href="bonuslar.html">Bonuslar</a>
-                        </li>
-                        <li>
-                            <a href="modelBasvuru.html">Model Başvurusu</a>
-                        </li>                       
-                    </ul>
-                </div>
-            </div>
-            <div class="footer-border"></div>
-            <div class="footer-yazi mt-3 pl-2 pr-2">
-                <p>turkuazgece Görüntülü sohbet sitelerinden biri olan turkuazgece.com ve ilgili tüm alt alan adlarında
-                    faaliyet gösteren sitemiz, 5651 sayılı yasa uyarınca "YER SAĞLAYICI" olarak faaliyet yürüttüğünden, TÜM
-                    ÜYELERİMİZ sitemizde "İÇERİK SAĞLAYICI" sıfatıyla faaliyet yürütmektedirler. Bu nedenle 5651 sayılı yasa
-                    ve Türk Ceza Yasası kapsamında yaptıkları tüm eylemlerden üyelerimiz kendileri sorumludur. Canlı sohbet
-                    sitelerinden biri olan turkuazgece.com; üyelerinin sağladığı hiçbir içerikten, yazışmalarından,
-                    sesli/videolu/görüntülü görüşmelerinden ve eylemlerinden sorumlu tutulamaz.
-                </p>
-                    <div class="text-center">
-                      <span>
-                        2021 turkuazgece.com Tüm Hakları Saklıdır.
-                      </span> 
-                    </div>
-            </div>           
+      <div class="container-fluid text-white">
+        <div class="row text-center">
+          <div class="col-md-4">
+            <ul>
+              <li>
+                <a href="index.html">Ana Sayfa</a>
+              </li>
+              <li>
+                <a href="yardim.html">Yardım</a>
+              </li>
+              <li>
+                <a href="bizeUlasin.html">Bize Ulaşın</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <ul>
+              <li>
+                <a href="destek.html">Destek</a>
+              </li>
+              <li>
+                <a href="gizlilikPolitikasi.html">Gizlilik Politikası</a>
+              </li>
+              <li>
+                <a href="kullanimSozlesmesi.html">Kullanım Sözleşmesi</a>
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-4">
+            <ul>
+              <li>
+                <a href="sureSatinAl.html">Süre Satın Al</a>
+              </li>
+              <li>
+                <a href="bonuslar.html">Bonuslar</a>
+              </li>
+              <li>
+                <a href="modelBasvuru.html">Model Başvurusu</a>
+              </li>
+            </ul>
+          </div>
         </div>
-    </footer> 
+        <div class="footer-border"></div>
+        <div class="footer-yazi mt-3 pl-2 pr-2">
+          <p>turkuazgece Görüntülü sohbet sitelerinden biri olan turkuazgece.com ve ilgili tüm alt alan adlarında
+            faaliyet gösteren sitemiz, 5651 sayılı yasa uyarınca "YER SAĞLAYICI" olarak faaliyet yürüttüğünden, TÜM
+            ÜYELERİMİZ sitemizde "İÇERİK SAĞLAYICI" sıfatıyla faaliyet yürütmektedirler. Bu nedenle 5651 sayılı yasa
+            ve Türk Ceza Yasası kapsamında yaptıkları tüm eylemlerden üyelerimiz kendileri sorumludur. Canlı sohbet
+            sitelerinden biri olan turkuazgece.com; üyelerinin sağladığı hiçbir içerikten, yazışmalarından,
+            sesli/videolu/görüntülü görüşmelerinden ve eylemlerinden sorumlu tutulamaz.
+          </p>
+          <div class="text-center">
+            <span>
+              2021 turkuazgece.com Tüm Hakları Saklıdır.
+            </span>
+          </div>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
