--- a/bonuslar.html
+++ b/bonuslar.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div class="container-fluid genel-container">
-        <div class="container w-75 bonus-container">
+        <div class="container bonus-container">
             <div class="page-title py-3">
                 <h3 class="fw-bold text-capitalize text-center">Promosyonlar</h3>
             </div>
