--- a/sureSatinAl.html
+++ b/sureSatinAl.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     <div class="container-fluid genel-container">
-        <div class="container w-100  sure-satin-al-container">
+        <div class="container sure-satin-al-container">
             <div class="page-title py-3 text-center">
                 <h3 class="fw-bold text-capitalize">Ödeme Yöntemi Seç</h3>
             </div>
@@ -83,7 +83,7 @@
                 <span class="d-block fw-bold" style="color: red;">Mobil ödeme için canlı desteğe ulaşınız.</span>
 
             </div>
-            <div class="table-container w-75 mt-3 mx-auto">
+            <div class="table-container mt-3 mx-auto">
                 <div class="table-responsive">
                     <table class="table table-bordered table-hover table-payment-selection">
                         <thead>
